resolved fdo#71598 postpone SetDirty during Insert/Delete

... until after all listeners are re-established.

(cherry picked from commit 20b7476142f75b49d10a75e48429a94cff0cec32)

Conflicts:
	sc/inc/formulacell.hxx
	sc/inc/table.hxx
	sc/source/core/data/column.cxx
	sc/source/core/data/document.cxx
	sc/source/core/data/formulacell.cxx

Backported.

Change-Id: I9f6036d4bcc9206191959a88ed5439b9860ca268
Reviewed-on: https://gerrit.libreoffice.org/7624
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>